# inventree-part-import-fork

./: .gitignore  AGENTS.MD  MCMASTER_API_TO_INVENTREE.MD  README.md  TODO.md  config.yaml  pyproject.toml  suppliers.yaml
docs/McMaster-Carr/: McMaster-Carr Product Information API.html
docs/superpowers/plans/: 2026-04-17-twice-add-interactive-mode.md  mcmaster-integration.md
docs/superpowers/specs/: 2026-04-17-enhanced-interactive-mode-design.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/wiki/: .__init__().md  .__init__()_1.md  .setup().md  .setup_class().md  .test_setup_categories().md  ApiPart.md  Company.md  DigiKey.md  DryInvenTreeAPI.md  Exception.md  InvenTreeObjectCreationError.md  InvenTreePartImportError.md  LCSC.md  Mouser.md  PartImporter.md  Pre Creation Hooks (hooks.py).md  Reichelt.md  RetryInvenTreeAPI.md  Safety via Dry Run.md  Supplier.md  SupplierError.md  SupplierLoadError.md  TME.md  TestCli.md  _COMMUNITY_CLI & Core Logic.md  _COMMUNITY_CLI Integration Tests.md  _COMMUNITY_Custom Exceptions.md  _COMMUNITY_InvenTree API Integration.md  _COMMUNITY_Localization Support.md  _COMMUNITY_Main Entrypoint.md  _COMMUNITY_Package Initialization.md  _COMMUNITY_Supplier Base & Hooks.md  __init__.py.md  __main__.py.md  _download_file_content().md  create_manufacturer().md  exceptions.py.md  get_category().md  get_category_parts().md  get_country().md  (+16 more)
graphify-out/wiki/.obsidian/: graph.json
inventree_part_import/: categories.py  cli.py  inventree_helpers.py  part_importer.py
inventree_part_import/config/: __init__.py
inventree_part_import/suppliers/: base.py  supplier_mcmaster.py
tests/: test_category_creator.py  test_mcmaster.py  test_mcmaster_api.py  test_mcmaster_sync.py
