[project]
name = "inventree-part-import"
version = "1.10.0"
description = "CLI to import parts from suppliers like DigiKey, LCSC, Mouser, etc. to InvenTree"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Environment :: Console",
    "Framework :: InvenTree",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
]
license = "MIT"
authors = [{ name = "Bobbe", email = "mail@30350n.de" }]
dependencies = [
    "beautifulsoup4",
    "browser-cookie3",
    "click",
    "cutie",
    "dlt",
    "duckdb",
    "error-helper",
    "fake-useragent",
    "inventree>=0.20",
    "isocodes>=2025.8.13",
    "mouser>=0.1.5",
    "platformdirs>=3.2",
    "pyyaml",
    "requests",
    "requests-oauthlib",
    "tablib[ods, xls, xlsx]",
    "thefuzz",
]

[project.urls]
Homepage = "https://github.com/30350n/inventree_part_import"

[project.scripts]
inventree-part-import = "inventree_part_import.cli:inventree_part_import"

[dependency-groups]
dev = ["basedpyright", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    ".direnv/",
    ".jj/",
    ".git/",
    ".github/",
    ".gitignore",
    ".gitmodules",
    ".pre-commit-config.yaml",
    "tests/",
    ".envrc",
    "tasks.py",
    "flake.nix",
    "flake.lock",
]

[tool.uv.sources]
inventree = { git = "https://github.com/30350n/inventree-python", branch = "type-hints" }

[tool.ruff]
line-length = 100
[tool.ruff.lint.isort]
combine-as-imports = true

[tool.basedpyright]
typeCheckingMode = "strict"
reportInvalidCast = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
allowedUntypedLibraries = ["browser_cookie3", "cutie", "inventree", "mouser", "tablib", "thefuzz"]
